k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mail-backend
  template:
    metadata:
      labels:
        app: mail-backend
    spec:
      containers:
        - name: backend
          image: mail-back:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mail-backend-service
spec:
  type: ClusterIP
  selector:
    app: mail-backend
  ports:
    - port: 8080
      targetPort: 8080
